2007-08-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c (append_escaped_text): Handle restricted
	characters by converting them to numeric character 
	entities.  (#464145, Andreas Monitzer)

	* tests/markup-escape-test.c: Add tests for restricted
	characters and numeric character entities. 

2007-08-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/Makefile.am:
	* glib/abicheck.sh: Make it work regardless of --enable-debug

2007-08-08  Tristan Van Berkom <tvb@gnome.org>

	* docs/reference/gobject/tmpl/gparamspec.sgml: Fixed minor typo in docs.

2007-08-07  Matthias Clasen  <mclasen@redhat.com>

	* MAINTAINERS: Update for new format regulations

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.0 ===

	* NEWS: Updates

	* configure.in: Bump version to 2.14.0

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Revert the J handling change,
	since it doesn't work.

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Fix a C99ism.  (#462549, Kazuki IWAMOTO)

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gregex.c: Handle J changes in the pattern
	correctly.  (#444765, Yevgen Muntyan)

2007-08-03  Pramod Raghavendra  <pramodleo@yahoo.co.uk>

	* configure.in: Added kn to ALL_LINGUAS

2007-08-01  Tor Lillqvist  <tml@novell.com>

	* glib/update-pcre/notdll.patch: Update so it applies again.

	* glib/pcre/pcre.h: Corresponding change.

	* glib/gutils.c (get_special_folder): Drop leftover use of a
	union.

	* glibconfig.h.win32.in: Update to match what configure produces.

2007-07-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/*: Update the internal PCRE to 7.2

2007-07-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/pltcheck.sh: Fix some glitches

	* glib/gregex.c: Remove debug spew

2007-07-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c:
	* glib/gregex.c:
	* glib/gstring.c: Various doc cleanups.
